service NormalService{
    rpc GetTime(GetTimeReq)returns(GetTimeResp){};
}